--- a/src/app.html
+++ b/src/app.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta property="og:title" content="Aides de l'Etat pour vos travaux d'ampleur">
+		<meta property="og:title" content="Aides de l'Etat pour vos travaux d'isolation">
 		<meta property="og:site_name" content="Groupe Dumont">
-		<meta property="og:description" content="Découvrez les aides de l'État pour financer vos travaux d'ampleur : rénovation énergétique, mise aux normes, isolation, et plus encore.">
+		<meta property="og:description" content="Découvrez les aides de l'État pour financer vos travaux d'isolation.">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://subvention.groupedumont.fr/cover-dumont.png">
-		<title>Groupe Dumont - Aides de l'Etat pour vos travaux d'ampleur</title>
-		<meta name="description" content="Découvrez les aides de l'État pour financer vos travaux d'ampleur : rénovation énergétique, mise aux normes, isolation, et plus encore.">
+		<title>Aides de l'Etat pour vos travaux d'ampleur - Groupe Dumont</title>
+		<meta name="description" content="Découvrez les aides de l'État pour financer vos travaux d'isolation.">
 
 		%sveltekit.head%
 	</head>
