--- a/src/app.html
+++ b/src/app.html
@@ -1,20 +1,68 @@
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta property="og:title" content="Aides de l'Etat pour vos travaux d'isolation">
-		<meta property="og:site_name" content="Groupe Dumont">
-		<meta property="og:description" content="Découvrez les aides de l'État pour financer vos travaux d'isolation.">
-		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://subvention.groupedumont.fr/cover-dumont.png">
-		<title>Aides de l'Etat pour vos travaux d'ampleur - Groupe Dumont</title>
-		<meta name="description" content="Découvrez les aides de l'État pour financer vos travaux d'isolation.">
+<html lang="fr">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+    <title>Aides de l’État pour vos travaux d’isolation | Groupe Dumont</title>
+    <meta name="description" content="Quelles subventions pour isoler votre logement ? Simulez vos aides (MaPrimeRénov’, CEE, Éco-PTZ) et découvrez les conditions, plafonds et démarches avec le Groupe Dumont." />
+    <link rel="canonical" href="https://subvention.groupedumont.fr/" />
+    <link rel="alternate" href="https://subvention.groupedumont.fr/" hreflang="fr-FR" />
+    <link rel="alternate" href="https://subvention.groupedumont.fr/" hreflang="x-default" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+    <link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+    <meta name="theme-color" content="#0b5fff" />
+    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Groupe Dumont" />
+    <meta property="og:title" content="Aides de l’État pour vos travaux d’isolation | Groupe Dumont" />
+    <meta property="og:description" content="Simulez vos aides et financez vos travaux d’isolation : MaPrimeRénov’, CEE, Éco-PTZ. Conditions, montants et démarches." />
+    <meta property="og:url" content="https://subvention.groupedumont.fr/" />
+    <meta property="og:image" content="https://subvention.groupedumont.fr/cover-dumont.png" />
+    <meta property="og:image:alt" content="Groupe Dumont — Aides et subventions pour l’isolation" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Aides de l’État pour vos travaux d’isolation | Groupe Dumont" />
+    <meta name="twitter:description" content="Découvrez et comparez les subventions pour isoler votre logement. Simulation rapide et accompagnement." />
+    <meta name="twitter:image" content="https://subvention.groupedumont.fr/cover-dumont.png" />
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17656917653"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'AW-17656917653');
+	</script>
+
+    <!-- Données structurées -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Aides de l’État pour vos travaux d’isolation",
+      "url": "https://subvention.groupedumont.fr/",
+      "inLanguage": "fr-FR",
+      "description": "Simulateur et guide des aides publiques (MaPrimeRénov’, CEE, Éco-PTZ) pour financer vos travaux d’isolation.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Groupe Dumont",
+        "url": "https://groupedumont.fr",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://subvention.groupedumont.fr/cover-dumont.png"
+        }
+      },
+      "image": "https://subvention.groupedumont.fr/cover-dumont.png"
+    }
+    </script>
+
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
